--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <div id="retry2" class="hidden">
     <h1>Je hebt gewonnen.</h1>
-    <p>Speel nog een keer</p>
+    <p>Nog een ronde?</p>
   </div>
 <!-- partial -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
